--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,53 @@
+aioredis==1.3.1
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+async-timeout==4.0.3
+bcrypt==4.1.2
+cachetools==5.3.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+cryptography==42.0.5
 dnspython==2.6.1
 email-validator==2.1.0.post1
 fastapi==0.109.2
+fastapi-cache==0.1.0
+fastapi-limiter==0.1.6
 greenlet==3.0.3
 h11==0.14.0
+hiredis==2.3.2
 httpcore==1.0.4
 httptools==0.6.1
 httpx==0.27.0
 idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jwt==1.3.1
 Mako==1.3.2
 MarkupSafe==2.1.5
 orjson==3.9.14
+passlib==1.7.4
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pycparser==2.21
 pydantic==2.6.1
 pydantic-extra-types==2.5.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.2
+PyJWT==2.8.0
 pypng==0.20220715.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
 qrcode==7.4.2
+redis==5.1.0b3
 requests==2.31.0
+shortuuid==1.0.11
 sniffio==1.3.0
-SQLAlchemy==2.0.27
+SQLAlchemy==2.0.28
 starlette==0.36.3
 typing_extensions==4.9.0
 ujson==5.9.0
