--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==42.0.5
 dnspython==2.6.1
+ecdsa==0.18.0
 email-validator==2.1.0.post1
 fastapi==0.109.2
 fastapi-cache==0.1.0
@@ -32,6 +33,7 @@ orjson==3.9.14
 passlib==1.7.4
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.6.1
 pydantic-extra-types==2.5.0
@@ -40,12 +42,15 @@ pydantic_core==2.16.2
 PyJWT==2.8.0
 pypng==0.20220715.0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.1
 qrcode==7.4.2
 redis==5.1.0b3
 requests==2.31.0
+rsa==4.9
 shortuuid==1.0.11
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.28
 starlette==0.36.3
